--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,6 +8,7 @@
     tools:context=".MainActivity">
 
     <TextView
+        style="@style/ListWordsName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/input_box_name"
@@ -28,14 +28,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:orientation="vertical"
         android:layout_marginTop="16dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:orientation="vertical">
+
         <TextView
+            style="@style/ListWordsName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/output_box__name"
-            />
+            android:text="@string/output_box__name" />
+
         <EditText
             android:id="@+id/res"
             android:layout_width="match_parent"
@@ -45,8 +47,7 @@
             android:id="@+id/send"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/send_by_share"
-            />
+            android:text="@string/send_by_share" />
     </LinearLayout>
 
 </LinearLayout>
