修改界面样式

--- a/app/src/main/res/layout/sample_custom_phrase_input.xml
+++ b/app/src/main/res/layout/sample_custom_phrase_input.xml
@@ -4,28 +4,39 @@
     android:orientation="vertical"
     >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/add_custom_phrase_key"
-        style="@style/ListWordsName"
-        />
-    <EditText
-        android:id="@+id/custom_key"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/replace"
-        />
-    <TextView
-        style="@style/ListWordsName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/add_custom_phrase_value"
-        />
-    <EditText
-        android:id="@+id/custom_value"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="match_parent"
+        android:layout_marginTop="24dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/add_custom_phrase_key"
+            style="@style/ListWordsName"
+            />
+        <EditText
+            android:id="@+id/custom_key"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/replace"
+            android:layout_marginBottom="8dp"
+            />
+        <TextView
+            style="@style/ListWordsName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/add_custom_phrase_value"
+            />
+        <EditText
+            android:id="@+id/custom_value"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+    </LinearLayout>
+
 
 </LinearLayout>
